--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,35 +1,31 @@
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.1
-click==8.3.1
-exceptiongroup==1.3.1
 fastapi==0.128.2
-h11==0.16.0
-idna==3.11
-pydantic==2.12.5
-pydantic_core==2.41.5
-pydantic_settings==2.12.0
-starlette==0.50.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
 uvicorn==0.40.0
-sqlalchemy
-psycopg2-binary
-python-dotenv
-alembic
-email-validator
-httpx
-ipdb
+gunicorn==21.2.0
+
+pydantic==2.12.5
+pydantic-settings==2.12.0
+email-validator==2.1.1
+
+sqlalchemy==2.0.36
+psycopg2-binary==2.9.9
+alembic==1.13.2
+
+python-dotenv==1.0.1
+python-multipart==0.0.9
+
 python-jose==3.3.0
 passlib[bcrypt]==1.7.4
 bcrypt==3.2.2
-python-multipart
-langchain
-langchain-core
-langchain-community
-sentence-transformers
-faiss-cpu
-groq
-langchain-groq
-redis
-gunicorn
+
+httpx==0.27.0
+redis==5.0.4
+
+langchain==0.2.16
+langchain-community==0.2.16
+langchain-groq==0.1.9
+groq==0.9.0
+
+sentence-transformers==2.7.0
+faiss-cpu==1.8.0
+
+ipdb==0.13.13
